--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -92,6 +92,10 @@ img {
   background-color: var(--basic-dark);
 }
 
+.bg-brown {
+  background: var(--brown);
+}
+
 div.container.margin-top-100.bg-basic-dark {
   padding-bottom: 0;
   padding-top: 55px;
@@ -139,6 +143,10 @@ div.container.margin-top-100.bg-basic-dark {
 
 .margin-bottom-0 {
   margin-bottom: 0;
+}
+
+.margin-0 {
+  margin: 0;
 }
 
 .card h3 {
