modified styles to h3

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -253,6 +253,10 @@ div.container.margin-top-100.bg-basic-dark {
   font-size: 14px;
 }
 
+.font-size-16 {
+  font-size: 16px;
+}
+
 .font-size-24 {
   font-size: 24px;
 }
