--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -45,10 +45,6 @@ body {
   margin: 0;
 }
 
-section {
-  margin: 0 auto;
-}
-
 header {
   display: block;
 }
@@ -350,8 +346,6 @@ div.container.margin-top-100.bg-basic-dark {
   align-content: center;
   justify-content: space-evenly;
   align-items: flex-start;
-
-  /* margin: 15px; */
   color: var(--basic-dark);
 }
 
@@ -362,8 +356,6 @@ div.container.margin-top-100.bg-basic-dark {
   text-decoration: none;
   display: flex;
   flex-wrap: wrap;
-
-  /* margin: 15px; */
   line-height: 1.2;
   color: var(--white);
 }
@@ -381,8 +373,12 @@ div.container.margin-top-100.bg-basic-dark {
   break-inside: auto;
 }
 
-.button-detailed {
+.btn {
+  width: 148px;
   padding: 12px 24px;
+}
+
+.btn-style {
   font-weight: 700;
   background-color: var(--basic);
   list-style-type: none;
@@ -501,8 +497,3 @@ button::before {
   text-transform: uppercase;
 }
 
-.col > .button-detailed {
-  display: inline-flex;
-  width: 148px;
-  height: 49px;
-}
