--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -376,7 +376,6 @@ div.container.margin-top-100.bg-basic-dark {
 
 .display-flex {
   display: flex;
-  flex-wrap: wrap;
 }
 
 .flex {
@@ -482,4 +481,8 @@ button::before {
 
 .border-0 {
   border: 0;
+}
+
+.display-block {
+  display: block;
 }
