--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -180,6 +180,10 @@ div.container.margin-top-100.bg-basic-dark {
   padding: 55px;
 }
 
+.padding-top-16 {
+  padding-top: 16px;
+}
+
 .padding-top-50 {
   padding-top: 50px;
 }
