--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -72,6 +72,7 @@ h3 {
 img {
   height: auto;
   vertical-align: middle;
+  max-width: 100%;
 }
 
 /* DESIGN STYLES */
@@ -85,7 +86,7 @@ img {
 }
 
 div.container.margin-top-100.bg-basic-dark {
-  padding-bottom: 0;
+  padding-bottom: 10px;
   padding-top: 55px;
 }
 
@@ -362,6 +363,7 @@ div.container.margin-top-100.bg-basic-dark {
 
 .btn {
   padding: 12px 24px;
+  display:inline;
 }
 
 .btn-style {
@@ -369,6 +371,10 @@ div.container.margin-top-100.bg-basic-dark {
   background-color: var(--basic);
   color: var(--white);
   text-decoration-line: none;
+}
+
+.margin-top-40 {
+  margin-top: 40px;
 }
 
 .display-flex {
@@ -400,6 +406,7 @@ div.container.margin-top-100.bg-basic-dark {
 
 .flex-row {
   display: flex;
+  width: 100%;
   gap: 30px;
 }
 
@@ -410,7 +417,7 @@ div.container.margin-top-100.bg-basic-dark {
 }
 
 .col {
-  flex-basis: fit-content;
+  width: 50%;
 }
 
 input {
@@ -480,4 +487,18 @@ button::before {
 
 .display-block {
   display: block;
+}
+
+.display-inline-block {
+  display: inline-block;
+}
+
+.flex-grow {
+  display: flex;
+  flex-grow: 0;
+}
+
+.padding-sides-55 {
+  padding-left: 55px;
+  padding-right: 55px;
 }
