--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -196,6 +196,10 @@ div.container.margin-top-100.bg-basic-dark {
   margin-top: 100px;
 }
 
+.margin-top-27 {
+  margin-top: 27px;
+}
+
 .margin-footer {
   margin-top: 76px;
   margin-bottom: 111px;
