add text-align-center to footer instead of flex

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -158,6 +158,10 @@ div.container.margin-top-100.bg-basic-dark {
   padding-bottom: 30px;
 }
 
+.padding-bottom-55 {
+  padding-bottom: 55px;
+}
+
 .padding-6-10 {
   padding-top: 6px;
   padding-left: 10px;
