--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -166,6 +166,10 @@ div.container.margin-top-100.bg-basic-dark {
   padding-bottom: 55px;
 }
 
+.padding-bottom-111 {
+  padding-bottom: 111px;
+}
+
 .padding-6-10 {
   padding-top: 6px;
   padding-left: 10px;
@@ -204,8 +208,8 @@ div.container.margin-top-100.bg-basic-dark {
 }
 
 .margin-footer {
-  margin-top: 76px;
-  margin-bottom: 111px;
+  margin-top: 60px;
+  
 }
 
 .margin-bottom-40 {
