--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,120 +1,12 @@
 /** CSS **/
-@import "../variables.css";
-@import "../basic-settings.css";
-@import "../fonts.css";
-@import "../atomic-styles.css";
-@import "../grid.css";
-@import "../button-styles.css";
-@import "../styles-of-the-card-component.css";
-@import "../form-styles.css";
-
-.pb-100 {
-  padding-bottom: 100px;
-}
-
-.padding-24 {
-  padding: 24px;
-}
-
-.padding-55 {
-  padding: 55px;
-}
-
-.padding-top-16 {
-  padding-top: 16px;
-}
-
-.padding-top-50 {
-  padding-top: 50px;
-}
-
-.padding-top-100 {
-  padding-top: 100px;
-}
-
-.mb-minus-200 {
-  margin-bottom: -200px;
-}
-
-.margin-top-100 {
-  margin-top: 100px;
-}
-
-.margin-top-30 {
-  margin-top: 30px;
-}
-
-.margin-bottom-0 {
-  margin-bottom: 0;
-}
-
-.margin-bottom-9 {
-  margin-bottom: 9px;
-}
-
-.margin-bottom-15 {
-  margin-bottom: 15px;
-}
-
-.center {
-  text-align: center;
-}
-
-.font-weight-400 {
-  font-weight: 400;
-}
-
-.font-family-neucha {
-  font-family: Neucha, sans-serif;
-}
-
-.font-family-opensans {
-  font-family: OpenSans-Regular, sans-serif;
-}
-
-.font-size-12 {
-  font-size: 12px;
-}
-
-.font-size-14 {
-  font-size: 14px;
-}
-
-.font-size-16 {
-  font-size: 16px;
-}
-
-.font-size-24 {
-  font-size: 24px;
-}
-
-.font-size-34 {
-  font-size: 34px;
-}
-
-.font-size-52 {
-  font-size: 52px;
-}
-
-.line-height-160 {
-  line-height: 1.6;
-}
-
-.line-height-29 {
-  line-height: 29px;
-}
-
-.line-height-120 {
-  line-height: 120%;
-}
-
-.color-translucent-dark {
-  color: var(--translucent-dark);
-}
-
-.margin-top-0 {
-  margin-top: 0;
-}
+@import "./variables.css";
+@import "./basic-settings.css";
+@import "./fonts.css";
+@import "./grid.css";
+@import "./button-styles.css";
+@import "./styles-of-the-card-component.css";
+@import "./form-styles.css";
+@import "./atomic-styles.css";
 
 .page-header {
   position: relative;
@@ -137,18 +29,6 @@
   content: "";
 }
 
-.bg-basic-dark {
-  background-color: var(--basic-dark);
-}
-
-.text-decoration-none {
-  text-decoration: none;
-}
-
-.color-white {
-  color: var(--white);
-}
-
 .img-main {
   position: absolute;
   top: 55px;
@@ -160,81 +40,7 @@
   filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
 }
 
-.text-align-center {
-  text-align: center;
-}
-
-input {
-  display: block;
-  width: 423px;
-  height: 50px;
-  padding: 15px;
-}
-
-.img-filter {
-  filter: drop-shadow(0 16px 32px rgb(0 0 0 / 15%));
-}
-
-.height-348 {
-  height: 348px;
-}
-
-.padding-bottom-0 {
-  padding-bottom: 0;
-}
-
-.to-upper-case {
-  text-transform: uppercase;
-}
-
-.border-0 {
-  border: 0;
-}
-
-.display-block {
-  display: block;
-}
-
-.width-50 {
-  width: 50%;
-}
-
-.footer-container {
-  position: relative;
-  width: 1110px;
-  margin: 0 auto;
-  padding: 100px 0;
-}
-
-.footer-flex-container {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.text-align-left {
-  text-align: left;
-}
-
 .footer-flex-item {
   box-sizing: border-box;
   width: calc((100% / 2) - 15px);
-}
-
-.padding-right-55 {
-  padding-right: 55px;
-}
-
-.footer-flex-container-row {
-  display: flex;
-  flex-flow: row nowrap;
-}
-
-.flex-container-row {
-  display: flex;
-}
-
-footer {
-  box-sizing: border-box;
 }
